--- a/src/tests/_output/FirstCest.frontpageWorks.fail.html
+++ b/src/tests/_output/FirstCest.frontpageWorks.fail.html
@@ -1,2 +1,2 @@
 <br />
-<b>Fatal error</b>:  Cannot declare class Infustructure\Storage\Message\MysqlAdapter, because the name is already in use in <b>/usr/share/nginx/infustructure/storage/message/MysqlAdapter.php</b> on line <b>15</b><br />
+<b>Fatal error</b>:  Cannot use [] for reading in <b>/usr/share/nginx/routes.php</b> on line <b>69</b><br />
